--- a/index.html
+++ b/index.html
@@ -1,15 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <h1 id="title">Muhammad ibn Musa al-Khwarizmi</h1>
+    <title>My tribute page</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
+<body>
+	<main id="main"> 
+		<div id="img">
 
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    Hello World, we are software developers!
-    <script  src="js/index.js"></script>
-  </body>
+			<!--Image of the Tribute Person-->
+			<img src="https://olympic.uz/uploads/news/a619861b1770f548e53d2a7237848068.jpg" id="image"
+				alt="Error Loading Image">
+			<small id="caption">
+        <br><br><em>
+				Muḥammad ibn Musa al-Khwarizmi, or al-Khwarizmi and formerly Latinized as Algoritmi 
+        de numero Indorum, was a Persian polymath from Khwarazm, who produced vastly influential 
+        works in mathematics, astronomy, and geography.</em>
+			</small>
+		</div>
+
+		<div id="tribute-data">
+
+			<!--Achievements and other
+				details of the person-->
+			<h1 class="title-MAK">
+				The Father of Algebra
+			</h1>
+      <h2>Early Life</h2>
+			<p>
+				☛ Muhammad Ibn Musa Al-Khwarizmi, nicknamed as Al-Khwarizmi,
+         belongs to a Persian family from Khorasan – now located in Uzbekistan.
+          The exact date of his birth is not clear, but it is normally considered to be 780.
+           There is very little information about his early life, but it is clear 
+           that he was one of the brilliant students in Baghdad, Iraq.<br><br>
+				
+           ☛ He made most of his discoveries and scientific contribution in the period of 813 to 833.
+         He was also an excellent translator and has translated so many books into the Arabic language
+          from other languages, such as Sanskrit and Greek. He has died at the age of 70 years in 850.
+
+        <h1>Discoveries and Contributions</h1>
+
+        <h2>Algebra Invention</h2>
+
+        ☛ The most famous work of Al-Khwarizmi was the development of algebra, a branch of math 
+        that deals with symbols and the operations between them. Algebra is a very important
+         field in mathematics and forms the foundation of modern science and technology. 
+         Al-Khwarizmi defined the algebra in his famous book of mathematics,
+          called Hisab Al-Jabr Wa-Al-Muqabala. This book was very famous and was translated in
+           many languages, before the dawn of Europeans Era, to teach and learn algebra.
+            The book has also discussed the solution of the first-degree and second-degree equations;
+             both analytically and geometrically. It also discussed some methods of solving algebraic problems.
+
+        <h2>Some other Contributions</h2>
+
+        ☛ <strong>Algorithms</strong>– Algorithm is an Arabic word which is now used 
+        to define a process in which certain steps are performed for the solution of a problem;
+         especially in the computer The concept of algorithms was first given by 
+         Al-Khwarizmi to solve certain problems in defined steps of calculations. Today, 
+         computer widely use algorithms to solve a wide variety of problems and decision making. 
+         Due to the introduction of the concept of algorithms, Al-Khwarizmi is sometimes referred to as
+          the father of computer science.<br><br>
+           ☛ <strong>Improvements in Sundials</strong> – Sundial is an instrument which shows time with
+            the help of the position of the Sun. The sun forms a shadow of the pointer on a plate 
+            which contains marks of the time period. The shadow of the pointer rotates on the marks 
+            when the sun changes its position. Al-Khwarizmi improved the design of sundials and made 
+            them a universal instrument for checking the time in any part of the world.<br><br> 
+           ☛ <strong>Map Development</strong>– Al-Khwarizmi developed an accurate map of that time
+            with the help of 70 geographers.
+
+        <h2>Facts</h2>
+
+				☛ The Soviet Union issued a stamp in 1983 on which image of Al-Khwarizmi was engraved.
+				<br><br> ☛ The Amir Kabir University of Tehran in Iran has placed the statue of Al-Khwarizmi.
+				<br><br> ☛ Al-Khwarizmi became the head of Dar-ul-Hikmat (House of Wisdom) at the time of Muslim Caliph Mamun.
+				<br><br>
+			</p>
+    </div>
+      <h4>
+        For more information,
+        check out
+        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Muhammad_ibn_Musa_al-Khwarizmi" target = _blank>
+          <b>Muhammad ibn Musa al-Khwarizmi</b> on Wikipedia.&nbsp;
+          <small>Developed by <a href="#">Htet Naing</a> and <a href="#">Azizbek Ruzmatov</a>
+        </small>
+        </h4>
+	</main>
+</body>
 </html>
-      
